@@ -18,11 +18,15 @@
 
 /* On systems with VFP support, but where glibc is built for
    soft-float, the libgcc functions used in libc and libm do not
-   support rounding modes, although fesetround succeeds.  */
+   support rounding modes, although fesetround succeeds, and do not
+   support exceptions.  */
 #ifdef __SOFTFP__
 # define ROUNDING_TESTS_float(MODE)	((MODE) == FE_TONEAREST)
 # define ROUNDING_TESTS_double(MODE)	((MODE) == FE_TONEAREST)
 # define ROUNDING_TESTS_long_double(MODE)	((MODE) == FE_TONEAREST)
+# define EXCEPTION_TESTS_float	0
+# define EXCEPTION_TESTS_double	0
+# define EXCEPTION_TESTS_long_double	0
 #endif
 
 #include_next <math-tests.h>
